package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"syscall"

	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/reflection"
	"google.golang.org/grpc/status"

	paymentV1 "github.com/Akbar-cmd/raketa-factory/shared/pkg/proto/payment/v1"
)

const grpcPort = 50052

// paymentService —Ä–µ–∞–ª–∏–∑—É–µ—Ç –∫–æ–Ω—Ç—Ä–∞–∫—Ç PaymentService
type PaymentService struct {
	paymentV1.UnimplementedPaymentServiceServer
}

// NewPaymentService –∫–æ–Ω—Å—Ç—Ä—É–∫—Ç–æ—Ä —Å–µ—Ä–≤–∏—Å–∞ –æ–ø–ª–∞—Ç—ã
func NewPaymentService() *PaymentService {
	return &PaymentService{}
}

// PayOrder –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ—Ç –∑–∞–ø—Ä–æ—Å –æ–ø–ª–∞—Ç—ã –∑–∞–∫–∞–∑–∞, –≥–µ–Ω–µ—Ä–∏—Ä—É–µ—Ç transaction_uuid –∏ –ª–æ–≥–∏—Ä—É–µ—Ç —Ä–µ–∑—É–ª—å—Ç–∞—Ç
func (s *PaymentService) PayOrder(_ context.Context, req *paymentV1.PayOrderRequest) (*paymentV1.PayOrderResponse, error) {
	// –í–∞–ª–∏–¥–∞—Ü–∏—è –ø–æ–ª–µ–π –∑–∞–ø—Ä–æ—Å–∞
	if req.GetOrderUuid() == "" || req.GetUserUuid() == "" {
		return nil, status.Errorf(codes.InvalidArgument, "order_uuid and user_uuid must be set")
	}

	// –ì–µ–Ω–µ—Ä–∞—Ü–∏—è UUID —Ç—Ä–∞–Ω–∑–∞–∫—Ü–∏–∏
	txnUUID := uuid.NewString()

	// –õ–æ–≥–∏—Ä–æ–≤–∞–Ω–∏–µ
	log.Printf("–û–ø–ª–∞—Ç–∞ –ø—Ä–æ—à–ª–∞ —É—Å–ø–µ—à–Ω–æ, \n transaction_uuid: %s\n order_uuid: %s\n user_uuid: %s\n method: %s\n", txnUUID, req.GetOrderUuid(), req.GetUserUuid(), req.GetPaymentMethod().String())

	return &paymentV1.PayOrderResponse{
		TransactionUuid: txnUUID,
	}, nil
}

func main() {
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", grpcPort))
	if err != nil {
		log.Printf("failed to listen: %v\n", err)
		return
	}
	defer func() {
		if cerr := lis.Close(); cerr != nil {
			log.Printf("failed to close listener: %v\n", cerr)
		}
	}()

	// –°–æ–∑–¥–∞–Ω–∏–µ –∏ —Ä–µ–≥–∏—Å—Ç—Ä–∞—Ü–∏—è gRPC-—Å–µ—Ä–≤–µ—Ä–∞
	s := grpc.NewServer()
	paymentV1.RegisterPaymentServiceServer(s, NewPaymentService())
	reflection.Register(s)

	// –ó–∞–ø—É—Å–∫ —Å–µ—Ä–≤–µ—Ä–∞ –≤ –≥–æ—Ä—É—Ç–∏–Ω–µ
	go func() {
		log.Printf("üöÄ gRPC server listening on %d\n", grpcPort)
		err = s.Serve(lis)
		if err != nil {
			log.Printf("failed to serve: %v\n", err)
			return
		}
	}()

	// Graceful shutdown
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit
	log.Println("üõë Shutting down gRPC server...")
	s.GracefulStop()
	log.Println("‚úÖ Server stopped")
}
